# laba_os_1

./: CMakeLists.txt  README.md
src/: creator.cpp  employee.cpp  employee.h  main.cpp  reporter.cpp
tests/: CMakeLists.txt  test_employee.cpp  test_reporter.cpp
